--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #424E61;
+    background-color: #000000;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -34,7 +34,7 @@ body {
 }
 
 #escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
+    background-image: linear-gradient(#09350c,#77d16f);
     color:white;
     display: flex;
     justify-content: center;
@@ -81,7 +81,7 @@ body {
 }
 
 .rodape{
-    background-color: black;
+    background-color: rgb(77, 126, 67);
     text-align: center;
 }
 
